Open API spec - fix binding enum value for ProtocolEndpoint model

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -10352,8 +10352,8 @@ definitions:
     properties:
       binding:
         enum:
-          - POST
-          - REDIRECT
+          - HTTP-POST
+          - HTTP-REDIRECT
         type: string
       destination:
         type: string
