--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -11319,17 +11319,17 @@ definitions:
           - dest: userId
             src: id
         operationId: removeRoleFromUser
-      - alias: listGroupTargetsForRole
+      - alias: listGroupTargets
         arguments:
           - dest: userId
             src: id
         operationId: listGroupTargetsForRole
-      - alias: removeGroupTargetFromRole
+      - alias: removeGroupTarget
         arguments:
           - dest: userId
             src: id
         operationId: removeGroupTargetFromRole
-      - alias: addGroupTargetToRole
+      - alias: addGroupTarget
         arguments:
           - dest: userId
             src: id
@@ -11339,7 +11339,7 @@ definitions:
           - dest: userId
             src: id
         operationId: listAssignedRolesForUser
-      - alias: addAllAppsAsTargetToRole
+      - alias: addAllAppsAsTarget
         arguments:
           - dest: userId
             src: id
