Open API Update - Sync with #241

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -9318,6 +9318,8 @@ definitions:
         type: object
       clientId:
         type: string
+      userId:
+        type: string
       created:
         format: date-time
         readOnly: true
