--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -11807,6 +11807,7 @@ definitions:
         'token:software:totp': '#/definitions/TotpUserFactor'
         u2f: '#/definitions/U2fUserFactor'
         web: '#/definitions/WebUserFactor'
+        webauthn: '#/definitions/WebAuthnUserFactor'
       propertyName: factorType
   UserIdentifierConditionEvaluatorPattern:
     properties:
@@ -12105,6 +12106,21 @@ definitions:
   WebUserFactorProfile:
     properties:
       credentialId:
+        type: string
+    x-okta-tags:
+      - UserFactor
+  WebAuthnUserFactor:
+    properties:
+      profile:
+        $ref: '#/definitions/WebAuthnUserFactorProfile'
+    x-okta-parent: '#/definitions/UserFactor'
+    x-okta-tags:
+      - UserFactor
+  WebAuthnUserFactorProfile:
+    properties:
+      credentialId:
+        type: string
+      authenticatorName:
         type: string
     x-okta-tags:
       - UserFactor
