--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -3800,9 +3800,11 @@ paths:
         - in: query
           name: since
           type: string
+          format: date-time
         - in: query
           name: filter
           type: string
+          format: date-time
         - in: query
           name: q
           type: string
