--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.okta.sdk</groupId>
+            <artifactId>okta-sdk-api</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
 
 
     </dependencies>
