--- a/pom.xml
+++ b/pom.xml
@@ -261,14 +261,13 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.0.0-M5</version>
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
                         <reuseForks>true</reuseForks>
-<!--
                         <forkCount>2C</forkCount>
                         <parallel>classes</parallel>
                         <threadCount>5</threadCount>
--->
                     </configuration>
                 </plugin>
                 <plugin>
