--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -125,11 +125,11 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>3.0.0-M5</version>
                         <configuration>
                             <systemPropertyVariables>
                                 <okta.use.testServer>${okta.use.testServer}</okta.use.testServer>
                             </systemPropertyVariables>
+                            <reportsDirectory>target/failsafe-reports-${surefire.forkNumber}</reportsDirectory>
                         </configuration>
                     </plugin>
                 </plugins>
