--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
                         <reuseForks>true</reuseForks>
-                        <forkCount>1</forkCount>
+                        <forkCount>5</forkCount>
                         <parallel>classesAndMethods</parallel>
                         <threadCount>5</threadCount>
                         <skipTests>${skipImplTests}</skipTests>
@@ -261,11 +261,11 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>3.0.0-M5</version>
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
                         <reuseForks>true</reuseForks>
-                        <forkCount>2C</forkCount>
+                        <reportsDirectory>target/failsafe-reports-${surefire.forkNumber}</reportsDirectory>
+                        <forkCount>5</forkCount>
                         <parallel>classes</parallel>
                         <threadCount>5</threadCount>
                     </configuration>
