Adds the option to disable impl tests

--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,7 @@
                         <forkCount>1</forkCount>
                         <parallel>classesAndMethods</parallel>
                         <threadCount>5</threadCount>
+                        <skipTests>${skipImplTests}</skipTests>
                     </configuration>
                 </plugin>
                 <plugin>
