--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -129,7 +129,7 @@
                             <systemPropertyVariables>
                                 <okta.use.testServer>${okta.use.testServer}</okta.use.testServer>
                             </systemPropertyVariables>
-                            <reportsDirectory>target/failsafe-reports-${surefire.forkNumber}</reportsDirectory>
+                            <!-- <reportsDirectory>target/failsafe-reports-${surefire.forkNumber}</reportsDirectory> -->
                         </configuration>
                     </plugin>
                 </plugins>
