--- a/swagger-templates/pom.xml
+++ b/swagger-templates/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.0-android</version>
+            <version>30.0-jre</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
