--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -11029,6 +11029,7 @@ definitions:
       expiresAt:
         format: date-time
         type: string
+        readOnly: true
       factorResult:
         $ref: '#/definitions/FactorResultType'
       profile:
