--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -7160,6 +7160,7 @@ definitions:
         BOOKMARK: '#/definitions/BookmarkApplication'
         BROWSER_PLUGIN: '#/definitions/BrowserPluginApplication'
         OPENID_CONNECT: '#/definitions/OpenIdConnectApplication'
+        SAML_1_1: '#/definitions/SamlApplicationV1'
         SAML_2_0: '#/definitions/SamlApplication'
         SECURE_PASSWORD_STORE: '#/definitions/SecurePasswordStoreApplication'
         WS_FEDERATION: '#/definitions/WsFederationApplication'
@@ -11221,6 +11222,13 @@ definitions:
     x-okta-tags:
       - Role
   SamlApplication:
+    properties:
+      settings:
+        $ref: '#/definitions/SamlApplicationSettings'
+    x-okta-parent: '#/definitions/Application'
+    x-okta-tags:
+      - Application
+  SamlApplicationV1:
     properties:
       settings:
         $ref: '#/definitions/SamlApplicationSettings'
