--- a/pom.xml
+++ b/pom.xml
@@ -263,7 +263,8 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
-                        <reuseForks>true</reuseForks>
+                        <forkCount>1</forkCount>
+                        <reuseForks>false</reuseForks>
 
 <!--                         <forkCount>2C</forkCount>
                         <parallel>classes</parallel>
