Add private_key_jwt to OAuthEndpointAuthenticationMethod
sync with https://github.com/okta/okta-management-openapi-spec/pull/10

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -9928,6 +9928,7 @@ definitions:
       - client_secret_post
       - client_secret_basic
       - client_secret_jwt
+      - private_key_jwt
     type: string
     x-okta-tags:
       - Application
