--- a/httpclients/okhttp/pom.xml
+++ b/httpclients/okhttp/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>com.okta.commons</groupId>
             <artifactId>okta-http-okhttp</artifactId>
-            <version>${otka.commons.version}</version>
+            <version>${okta.commons.version}</version>
         </dependency>
     </dependencies>
 </project>
