--- a/swagger-templates/pom.xml
+++ b/swagger-templates/pom.xml
@@ -50,6 +50,10 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-ext</artifactId>
                 </exclusion>
+                <exclusion>
+                     <groupId>org.apache.httpcomponents</groupId>
+                     <artifactId>httpclient</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
