--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
     <parent>
         <groupId>com.okta</groupId>
         <artifactId>okta-parent</artifactId>
-        <version>18</version>
+        <version>19</version>
     </parent>
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>3.0.1</version>
+    <version>3.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -35,12 +35,12 @@
 
     <properties>
         <swagger-annotations.version>1.5.8</swagger-annotations.version>
-        <jackson.version>2.10.0</jackson.version>
+        <jackson.version>2.12.1</jackson.version>
         <snakeyaml.version>1.26</snakeyaml.version>
-        <bouncycastle.version>1.66</bouncycastle.version>
+        <bouncycastle.version>1.68</bouncycastle.version>
         <jjwt.version>0.11.1</jjwt.version>
-        <okta.sdk.previousVersion>2.0.0</okta.sdk.previousVersion>
-        <otka.commons.version>1.2.4</otka.commons.version>
+        <okta.sdk.previousVersion>3.0.1</okta.sdk.previousVersion>
+        <okta.commons.version>1.2.5</okta.commons.version>
 
         <github.slug>okta/okta-sdk-java</github.slug>
     </properties>
@@ -72,54 +72,54 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>3.0.1</version>
+                <version>3.0.2-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>3.0.1</version>
+                <version>3.0.2-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>3.0.1</version>
+                <version>3.0.2-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>3.0.1</version>
+                <version>3.0.2-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-okhttp</artifactId>
-                <version>3.0.1</version>
+                <version>3.0.2-SNAPSHOT</version>
             </dependency>
 
             <!-- Other Okta Projects -->
             <dependency>
                 <groupId>com.okta.commons</groupId>
                 <artifactId>okta-config-check</artifactId>
-                <version>${otka.commons.version}</version>
+                <version>${okta.commons.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.commons</groupId>
                 <artifactId>okta-commons-lang</artifactId>
-                <version>${otka.commons.version}</version>
+                <version>${okta.commons.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.commons</groupId>
                 <artifactId>okta-http-api</artifactId>
-                <version>${otka.commons.version}</version>
+                <version>${okta.commons.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.commons</groupId>
                 <artifactId>okta-http-httpclient</artifactId>
-                <version>${otka.commons.version}</version>
+                <version>${okta.commons.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.commons</groupId>
                 <artifactId>okta-http-okhttp</artifactId>
-                <version>${otka.commons.version}</version>
+                <version>${okta.commons.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.annotation</groupId>
@@ -131,14 +131,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>3.0.1</version>
+                <version>3.0.2-SNAPSHOT</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>3.0.1</version>
+                <version>3.0.2-SNAPSHOT</version>
             </dependency>
 
             <!-- Logging -->
@@ -316,7 +316,7 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>3.0.1</version>
+                            <version>3.0.2-SNAPSHOT</version>
                         </dependency>
                     </dependencies>
                 </plugin>
