2. Not finished yet

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -7673,6 +7673,8 @@ definitions:
         arguments:
           - dest: policyId
             src: id
+#          - dest: policy
+#            self: true
         operationId: updateAuthorizationServerPolicy
       - alias: deletePolicy
         arguments:
