2. Missing code discriminator: https://github.com/okta/openapi/blob/d0e2243b9e24d2ab730c943b4f9d27f715ddcd25/dist/spec.yaml#L8254

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -8256,6 +8256,7 @@ definitions:
     x-okta-tags:
       - EventHook
   EventSubscriptions:
+    discriminator: type
     properties:
       items:
         items:
