--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -1,18 +1,3 @@
-#
-# Copyright 2020-Present Okta, Inc.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
 swagger: '2.0'
 info:
   title: Okta API
@@ -8085,11 +8070,20 @@ definitions:
     properties:
       supportedMDMFrameworks:
         items:
-          $ref: '#/definitions/MDMFrameworks'
+          enum:
+            - AFW
+            - SAFE
+            - NATIVE
+          type: string
         type: array
       types:
         items:
-          $ref: '#/definitions/Platforms'
+          enum:
+            - IOS
+            - ANDROID
+            - OSX
+            - WINDOWS
+          type: string
         type: array
     type: object
     x-okta-tags:
@@ -9632,16 +9626,6 @@ definitions:
     type: object
     x-okta-tags:
       - Policy
-  MDMFrameworks:
-    enum:
-      - authorization_code
-      - implicit
-      - password
-      - refresh_token
-      - client_credentials
-    type: string
-    x-okta-tags:
-      - Policy
   OAuth2Actor:
     properties:
       id:
@@ -10472,15 +10456,6 @@ definitions:
       recovery:
         $ref: '#/definitions/PasswordPolicyRecoverySettings'
     type: object
-    x-okta-tags:
-      - Policy
-  Platforms:
-    enum:
-      - IOS
-      - ANDROID
-      - OSX
-      - WINDOWS
-    type: string
     x-okta-tags:
       - Policy
   PlatformConditionEvaluatorPlatform:
