--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <snakeyaml.version>1.26</snakeyaml.version>
         <bouncycastle.version>1.68</bouncycastle.version>
         <jjwt.version>0.11.1</jjwt.version>
-        <okta.sdk.previousVersion>3.0.3</okta.sdk.previousVersion>
+        <okta.sdk.previousVersion>3.0.4-SNAPSHOT</okta.sdk.previousVersion><!-- TODO: Revert this -->
         <okta.commons.version>1.2.5</okta.commons.version>
 
         <github.slug>okta/okta-sdk-java</github.slug>
@@ -344,7 +344,7 @@
                         <parameter>
                             <onlyModified>true</onlyModified>
                             <breakBuildOnBinaryIncompatibleModifications>false</breakBuildOnBinaryIncompatibleModifications><!-- TODO: Revert to true-->
-                            <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
+                            <breakBuildBasedOnSemanticVersioning>false</breakBuildBasedOnSemanticVersioning>
                             <postAnalysisScript>${root.dir}/src/japicmp/postAnalysisScript.groovy</postAnalysisScript>
                         </parameter>
                     </configuration>
