--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -9255,8 +9255,6 @@ definitions:
           type: object
         readOnly: true
         type: object
-      name:
-        type: string
       associated:
         $ref: '#/definitions/LinkedObjectDetails'
       primary:
@@ -9274,7 +9272,7 @@ definitions:
       - alias: delete
         arguments:
           - dest: linkedObjectName
-            src: name
+            self: true
         operationId: deleteLinkedObjectDefinition
     x-okta-tags:
       - LinkedObject
