NetworkZone caching issue

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -7225,6 +7225,8 @@ paths:
       responses:
         '200':
           description: Success
+          schema:
+            $ref: '#/definitions/NetworkZone'
       security:
         - api_token: []
       summary: Activate Network Zone
@@ -7246,6 +7248,8 @@ paths:
       responses:
         '200':
           description: Success
+          schema:
+            $ref: '#/definitions/NetworkZone'
       security:
         - api_token: []
       summary: Deactivate Network Zone
