--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -121,7 +121,12 @@
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.9.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
