--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,7 @@
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
-                <version>${testng.version}</version>
+                <version>7.0.0</version>
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
