OKTA-347728: Fetch and use Open API spec from npm

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -60,6 +60,10 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.zalando.maven.plugins</groupId>
                 <artifactId>swagger-codegen-maven-plugin</artifactId>
                 <executions>
