--- a/examples/quickstart/pom.xml
+++ b/examples/quickstart/pom.xml
@@ -60,8 +60,17 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.3.2</version>
                 <executions>
+                    <execution>
+                        <id>copy to swagger</id>
+                        <configuration>
+                            <executable>sh</executable>
+                            <arguments>
+                                <argument>-c</argument>
+                                <argument>cp ../../node_modules/@okta/openapi/dist/spec.yaml ../../src/swagger/api.yaml</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
                     <execution>
                         <goals>
                             <goal>java</goal>
