--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -13536,7 +13536,7 @@ definitions:
     properties:
       type:
         type: string
-      valuse:
+      value:
         type: string
     type: object
     x-okta-tags:
